--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 falcon==1.4.1            # Apache-2.0
 SQLAlchemy==1.2.6        # MIT
-requests==2.18.4         # Apache-2.0
+requests>=2.20.0         # Apache-2.0
 prometheus_client==0.2.0 # Apache-2.0
 oslo.config==4.11.1      # Apache-2.0
 oslo.log==3.30.2         # Apache-2.0
